--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <section class="section6">
       <div class="box1">
         <div class="strtegy">
-          <img src="/images/stratigy_sec6.png" alt="" />
+          <img src="images/stratigy_sec6.png" alt="" />
         </div>
         <h3>Strategy</h3>
         <p>
@@ -159,7 +159,7 @@
         <div class="img"></div>
 
         <div class="ui">
-          <div class="ui_logo"><img src="/images/ui&ux_sec7.png" alt="" /></div>
+          <div class="ui_logo"><img src="images/ui&ux_sec7.png" alt="" /></div>
           <div class="ui_text">
             <h3>UI/UX Development</h3>
             <p>
